--- a/Css/style.css
+++ b/Css/style.css
@@ -2,6 +2,7 @@ body{
     background-color:beige;
 }
 .background{
+    border-radius: 20px;
     background-image: url(/Images/nino.jpg);
     position: absolute;
     background-size: 1000px 500px;
@@ -56,4 +57,46 @@ body{
 
 .error-messege{
     color: red;
+}
+
+.button-log-out{
+    position: absolute;
+    top: 25px;
+    left: 1234px;
+    width: 20px;
+    height: 20px;
+}
+
+.glass{
+    position: absolute;
+    top: 130px;
+    left: 700px;
+    width: 400px;
+    height: 400px;
+    background: linear-gradient(13deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+}
+
+.buttons-notes{
+    border-radius: 20px;
+    position: absolute;
+    top: 300px;
+    left: 430px;
+    width: 20px;
+    height: 20px;
+}
+
+.calculator-image{
+    position: absolute;
+    background-image: url(/Images/calculator.png);
+    background-repeat: no-repeat;
+    background-size: 100px 120px;
+    width: 200px;
+    height: 250px;
+    top: 270px;
+    left: 108px;
 }
