--- a/Css/style.css
+++ b/Css/style.css
@@ -98,5 +98,190 @@ body{
     width: 200px;
     height: 250px;
     top: 270px;
-    left: 108px;
+    left: 105px;
+}
+
+.quadratic-button{
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    top: 400px;
+    left: 65px;
+}
+
+.gcd-botton{
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    top: 450px;
+    left: 85px;
+}
+
+.username{
+    position: absolute;
+    top: 180px;
+    left: 100px;
+    width: 110px;
+    height: 30px;
+    border-color: black;
+    background-color:bisque;
+    text-align: center;
+}
+
+.quadratic{
+    position: absolute;
+    width: 50px;
+    height: 35px;
+    top: 188px;
+    left: 740px;
+    text-align: center;
+}
+
+.lineal{
+    position: absolute;
+    width: 50px;
+    height: 35px;
+    top: 188px;
+    left: 905px;
+    text-align: center;
+}
+
+.independient{
+    position: absolute;
+    width: 50px;
+    height: 35px;
+    top: 188px;
+    left: 1013px;
+    text-align: center;
+}
+
+.calculator-text-quadretic{
+    position: absolute;
+    top: 180px;
+    left: 800px;
+    width: 30px;
+    height: 20px;
+    text-align: center;
+}
+
+.calculator-text-lineal{
+    position: absolute;
+    top: 180px;
+    left: 960px;
+    width: 30px;
+    height: 20px;
+    text-align: center;
+}
+
+.calculate-botton{
+    position: absolute;
+    top: 300px;
+    left: 460px;
+}
+
+.answer{
+    position: absolute;
+    top: 300px;
+    left: 750px;
+}
+
+.answer1{
+    position: absolute;
+    width: 50px;
+    height: 35px;
+    top: 380px;
+    left: 800px;
+    text-align: center;
+}
+
+.answer2{
+    position: absolute;
+    width: 50px;
+    height: 35px;
+    top: 380px;
+    left: 940px;
+    text-align: center; 
+}
+
+.instructions-quadratic{
+    background-color: white;
+    width: 260px;
+    height: 240px;
+    position: relative;
+    top: 250px;
+    left: 25px;
+    text-align: center;
+    letter-spacing: 2px;
+    padding: 30px;
+}
+
+.button-back{
+    position: absolute;
+    top: 25px;
+    left: 1155px;
+    width: 20px;
+    height: 20px;
+}
+
+.instructions-gcd{
+    background-color: white;
+    width: 260px;
+    height: 190px;
+    position: relative;
+    top: 250px;
+    left: 25px;
+    text-align: center;
+    letter-spacing: 2px;
+    padding: 30px;
+}
+
+.a{
+    position: absolute;
+    top: 180px;
+    left: 800px;
+    width: 30px;
+    height: 20px;
+    text-align: center;
+}
+
+.b{
+    position: absolute;
+    top: 230px;
+    left: 800px;
+    width: 30px;
+    height: 20px;
+    text-align: center;
+}
+
+.a-value{
+    position: absolute;
+    width: 50px;
+    height: 35px;
+    top: 190px;
+    left: 900px;
+    text-align: center;
+}
+
+.b-value{
+    position: absolute;
+    width: 50px;
+    height: 35px;
+    top: 240px;
+    left: 900px;
+    text-align: center;
+}
+
+.answer-gcd{
+    position: absolute;
+    top: 350px;
+    left: 790px;
+}
+
+.answer-gcd-number{
+    position: absolute;
+    width: 50px;
+    height: 35px;
+    top: 390px;
+    left: 870px;
+    text-align: center; 
 }
