--- a/Css/style.css
+++ b/Css/style.css
@@ -56,7 +56,7 @@ body {
     left: 95px;
 }
 
-.error-messege {
+.error-message {
     color: red;
 }
 
@@ -110,7 +110,7 @@ body {
     left: 65px;
 }
 
-.gcd-botton {
+.gcd-button {
     position: absolute;
     width: 100px;
     height: 100px;
@@ -147,7 +147,7 @@ body {
     text-align: center;
 }
 
-.independient {
+.independent {
     position: absolute;
     width: 50px;
     height: 35px;
@@ -156,7 +156,7 @@ body {
     text-align: center;
 }
 
-.calculator-text-quadretic {
+.calculator-text-quadratic {
     position: absolute;
     top: 180px;
     left: 800px;
@@ -174,7 +174,7 @@ body {
     text-align: center;
 }
 
-.calculate-botton {
+.calculate-button {
     position: absolute;
     top: 300px;
     left: 460px;
